# aws_mock

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  aws_mock.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: pre-commit.yml  pytest.yml
aws_mock/: admin.py  attach_internet_gateway.py  authorize_security_group_ingress.py  certificates.py  copy_image.py  create_internet_gateway.py  create_route_table.py  create_security_group.py  create_subnet.py  create_tags.py  create_vpc.py  describe_availability_zones.py  describe_images.py  describe_instances.py  describe_internet_gateways.py  describe_key_pairs.py  describe_route_tables.py  describe_security_groups.py  describe_subnets.py  describe_vpc.py  describe_vpcs.py  import_key_pair.py  key_pairs.py  lib.py  main.py  modify_subnet_attribute.py  mongo.py  predefined.py  proxy.py  run_instances.py  security_groups.py  wsgi.py
aws_mock/requests/: attach_internet_gateway.py  authorize_security_group_ingress.py  copy_image.py  (+18 more)
configs/: cert.ext  mongod.conf  nginx.conf  supervisord.conf  uwsgi.ini  uwsgi_admin.ini  uwsgi_devmode.ini
scripts/: create_ca.sh  create_cert.sh  install_ca.sh  mocked-hosts.sh  patch_etc_hosts.sh  run.sh
tests/: base.py  conftest.py  test_create_internet_gateway.py  test_create_subnet.py  test_create_tags.py  test_create_vpc.py  test_describe_instances.py  test_describe_route_tables.py  test_describe_vpc.py  test_images.py  test_instances.py  test_internet_gateways.py  test_key_pairs.py  test_run_instances.py  test_security_groups.py  test_subnets.py  test_vpcs.py
(+50 files in other folders)
